Modificado inicio, añadida vista a dashboard de usuarios

--- a/EPDTAD_3.2/resources/css/theme.css
+++ b/EPDTAD_3.2/resources/css/theme.css
@@ -54,6 +54,30 @@
     scroll-behavior: smooth;
   }
 }
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.imagen-popup {
+  max-width: 50%;
+  max-height: 50%;
+  object-fit: contain;
+  cursor: zoom-out;
+  transition: all 0.2s ease-in-out;
+}
+
+.imagen-popup:hover {
+  transform: scale(1.2);
+}
 
 body {
   margin: 0;
@@ -5322,16 +5346,14 @@ fieldset:disabled .btn {
 .card-img-bottom {
   width: 100%;
 }
-.card {
-  width: var(--max)
-  }
+
   
 
 .card-img-top{
   width: 100%;
 max-width: var(--max);
 height: calc(var(--max));
-object-fit: cover;
+object-fit: contain;
 }
 .card-img,
 .card-img-top {
